--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "airbnb-base",
+  "extends": ["eslint-config-airbnb-base", "eslint-config-prettier"],
   "parserOptions": {
     "sourceType": "script"
   },
