--- a/package.json
+++ b/package.json
@@ -9,26 +9,19 @@
   "scripts": {
     "test": "mocha",
     "precommit": "lint-staged",
-    "format": "npm run staged-format \"**/*.js\"",
+    "format": "npm run staged-format \"**/*.+(js|json)\"",
     "staged-format": "prettier --single-quote --write",
     "commitmsg": "commitlint -e"
   },
-  "keywords": [
-    "base64",
-    "image",
-    "webpack",
-    "loader",
-    "img",
-    "src",
-    "img src"
-  ],
+  "keywords": ["base64", "image", "webpack", "loader", "img", "src", "img src"],
   "lint-staged": {
     "*.js": [
       "npm run test",
       "npm run staged-format",
       "eslint --fix",
       "git add"
-    ]
+    ],
+    "*.json": ["npm run staged-format", "git add"]
   },
   "bugs": "https://github.com/jahredhope/base64-image-loader/issues",
   "main": "index.js",
